b1_security_group/main.tf

resource "aws_security_group" "gceraj_kube_sg" {
  name        = "kube-security-group"
  description = "Security group for Kubernetes nodes"
  vpc_id      = var.vpc_1_id

  tags = {
    Name = "gceraj-kube-sg"
  }
}

resource "aws_security_group_rule" "ssh_inbound" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.gceraj_kube_sg.id
}

resource "aws_security_group_rule" "kube_api_inbound" {
  type              = "ingress"
  from_port         = 6443
  to_port           = 6443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.gceraj_kube_sg.id
}

resource "aws_security_group_rule" "node_to_node" {
  type              = "ingress"
  from_port         = 0
  to_port           = 65535
  protocol          = "tcp"
  self              = true
  security_group_id = aws_security_group.gceraj_kube_sg.id
}


resource "aws_security_group_rule" "gceraj_all_traffic" {
  type              = "ingress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.gceraj_kube_sg.id
}

resource "aws_security_group_rule" "all_outbound" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.gceraj_kube_sg.id
}
